--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <!--Navigation bar-->
         <nav class="navbar navbar-expand-lg navbar-light bg-success">
             <div class="container">
-                <a class="navbar-brand" href="brand.jpg">Nylad's Landscaping</a>
+                <a class="navbar-brand" href="brand.jpg">Nalyd's Landscaping</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -83,12 +83,19 @@
     </section>
 </main>
 
-<!--Footer section with contact info-->
-<footer class="text-center">
-    <div class="container">
-        <h5>Contact Us</h5>
-        <p id="contact"><a href="mailto:dylan.white@Lmi.com">Email Us</a></p>
-        <p>Call Us @ (123) 456-7890</p>
+<!--Footer section-->
+<footer id="contact" class="text-center bg-dark text-white py-4">
+    <div class="container d-flex flex-column flex-md-row justify-content-between align-items-center">
+        <div class="d-flex flex-column text-center text-md-start">
+            <h5>Contact Us</h5>
+            <p class="mb-1">NalydLandscaping@gmail.com</p>
+            <p class="mb-1">Phone: (123) 456-7890</p>
+        </div>
+        <div class="d-flex flex-column text-center text-md-start">
+            <h5>Follow us on Social Media</h5>
+            <p class="mb-1"><a href="www.facebook.com">Facebook</a></p>
+            <p class="mb-1"><a href="www.instagram.com">Instagram</a></p>
+        </div>
     </div>
 </footer>
 
