--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
         </div>
         <div class="d-flex flex-column text-center text-md-start">
             <h5>Follow us on Social Media</h5>
-            <p class="mb-1"><a href="www.facebook.com">Facebook</a></p>
-            <p class="mb-1"><a href="www.instagram.com">Instagram</a></p>
+            <p class="mb-1"><a href="https://www.facebook.com/?_rdr">Facebook</a></p>
+            <p class="mb-1"><a href="https://www.instagram.com/">Instagram</a></p>
         </div>
     </div>
 </footer>
